# tbd-pico-pd-seq

./: .gitmodules  CMakeLists.txt  openocd-debug.cfg  simbut.pd  simknob.pd  simulator.pd  test2.pd
src/: display.c  display.h  i2c.c  i2c.h  leds.c  leds.h  m0FaultDispatch.c  m0FaultDispatch.h  main.c  pd_seq.c  pd_seq.h  tbd.c  tbd.h  uart_midi.c  uart_midi.h  ui_board.c  ui_board.h  usb_host.c  usb_host.h
